[package]
name = "my_redis"
version = "0.1.0"
edition = "2024"
default-run = "my_redis" 

[dependencies]
mini-redis = "0.4.1"
tokio = { version = "1.48.0", features = ["full"] }
bytes = "1.7.1"
futures = "0.3.31"

[[bin]]
name = "my_redis"
path = "src/main.rs"

 
[[example]]
name = "hello"
path = "examples/hello.rs"

